Bug 130736 - [site-issue] http://gulesider.no: start page is misrendered, navigation tabs gets hidden
Summary: [site-issue] http://gulesider.no: start page is misrendered, navigation tabs ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-13 05:33 UTC by Børre Gaup
Modified: 2006-07-31 00:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot with konqueror of misrendered page (149.13 KB, image/png)
2006-07-13 05:38 UTC, Børre Gaup
Details
same page in firefox, correctly rendered (87.73 KB, image/png)
2006-07-13 05:40 UTC, Børre Gaup
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Børre Gaup 2006-07-13 05:33:51 UTC
Version:           3.5.3 (using KDE 3.5.3, Debian Package 4:3.5.3-1 (testing/unstable))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.16-ck12

The start page is misrenderet
The advertisement which is supposed to be at the top of the page is misplaced and hide the navigation tabs on webpage. It used to work up until KDE 3.5.2.
Comment 1 Børre Gaup 2006-07-13 05:38:55 UTC
Created attachment 16973 [details]
screenshot with konqueror of misrendered page
Comment 2 Børre Gaup 2006-07-13 05:40:00 UTC
Created attachment 16974 [details]
same page in firefox, correctly rendered
Comment 3 Germain Garand 2006-07-31 00:21:13 UTC
SVN commit 568025 by ggarand:

parse 'align' attribute of iframes

BUG: 130736



 M  +3 -0      html_baseimpl.cpp  


--- branches/KDE/3.5/kdelibs/khtml/html/html_baseimpl.cpp #568024:568025
@@ -624,6 +624,9 @@
         else
             removeCSSProperty(CSS_PROP_HEIGHT);
         break;
+    case ATTR_ALIGN:
+        addHTMLAlignment( attr->value() );
+        break;
     case ATTR_SRC:
         needWidgetUpdate = true; // ### do this for scrolling, margins etc?
         HTMLFrameElementImpl::parseAttribute( attr );