parse 'align' attribute of iframes

BUG: 130736


svn path=/branches/KDE/3.5/kdelibs/; revision=568025